# semantics

./: .gitignore  pyproject.toml
.codewith/: codewith.db-shm  codewith.db-wal
.github/workflows/: publish-pypi.yml
.takumi/: takumi.db-shm  takumi.db-wal
.takumi/worktrees/agent-a0c20301/codebooks/: dictionary_v1.json  semhasher_48d_4b.npz  semhasher_64d_2b.npz
.takumi/worktrees/agent-a0c20301/semhex/: __main__.py
.takumi/worktrees/agent-a0c20301/tests/: test_blend.py  test_distance.py  test_semantic_rgb_auth.py
.takumi/worktrees/agent-a0c20301/training/: download_data.py
.takumi/worktrees/agent-a481469c/tests/: test_semantic_rgb.py
.takumi/worktrees/agent-a481469c/training/: build_phrases.py
.takumi/worktrees/agent-a4ba3875/evaluation/: eval_codec.py
.takumi/worktrees/agent-a4ba3875/tests/: test_cli_validation.py
.takumi/worktrees/agent-a4ba3875/training/: embed_data.py
.takumi/worktrees/agent-a6cb8500/codebooks/: geohash_state.npz  semhasher_96d_2b.npz
.takumi/worktrees/agent-a6cb8500/semhex/: cli.py
.takumi/worktrees/agent-a6cb8500/training/: build_codebook_llm.py  build_map.py  train_scaling.py
.takumi/worktrees/agent-a967f2d9/: CLAUDE.md
.takumi/worktrees/agent-a97f1909/: MISSION.md
.takumi/worktrees/agent-abacec91/: .gitignore
.takumi/worktrees/agent-abf21336/: PLAN.md  README.md
.takumi/worktrees/agent-af26e782/: pyproject.toml
.takumi/worktrees/agent-af26e782/codebooks/map_v1/: centroids.npy
.takumi/worktrees/agent-af26e782/evaluation/: eval_roundtrip.py
.takumi/worktrees/agent-af26e782/semhex/embeddings/: openai_embed.py
.takumi/worktrees/agent-af26e782/tests/: test_encoder.py
(+67 files in other folders)
