[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semhex"
version = "0.1.0"
description = "SemHex — Semantic Hexadecimal Encoding. A universal compact discrete encoding for meaning, like hex codes for colors."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Andrei Hasna", email = "andrei@hasna.com" },
]
keywords = ["semantic", "encoding", "compression", "embeddings", "nlp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
openai = [
    "openai>=1.0",
]
search = [
    "faiss-cpu>=1.7",
]
train = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "faiss-cpu>=1.7",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "semhex[local,openai,search,train,mcp,dev]",
]

[project.scripts]
semhex = "semhex.cli:main"

[project.urls]
Homepage = "https://github.com/hasna/open-semhex"
Repository = "https://github.com/hasna/open-semhex"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["semhex"]
